--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;1,300&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="body">
   <app-root></app-root>
 </body>
 </html>
