--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,9 @@
 </head>
 <body class="body">
   <app-root></app-root>
+
+
+  <script src="../src/assets/pics/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </body>
 </html>
